# nos-workflow

./: README.md  build_singularity.sh  pyproject.toml  stofs3d.def
.github/workflows/: #docker-build.yml#  docker-build-intel.yml  docker-build.yml
containers/: Dockerfile  Dockerfile.intel  READMEintel.md  environment.sh  get_slurm_node.py  install-cfp.sh  install-mpi-wrapper.sh  run.ver  sample_compaths.list  slurm.conf  slurmdbd.conf
examples/: config_adcirc.yaml  config_schism.yaml
examples/scripts/: adcirc_prep_forecast.sh  adcirc_prep_nowcast.sh  adcirc_run_forecast.sh  adcirc_run_nowcast.sh  adcirc_run_postproc.sh  schism_prep_forecast.sh  schism_run_forecast.sh  schism_run_postproc_1.sh  schism_run_postproc_2.sh
examples/stofs_scripts/stofs_3d_atl/: JSTOFS_3D_ATL_PREP  exstofs_3d_atl_post_1.sh
exec/stofs_3d_atl/: stofs_3d_atl_gen_3Dth_from_hycom  stofs_3d_atl_gen_nudge_from_hycom  stofs_3d_atl_netcdf2shef  stofs_3d_atl_tide_fac
scripts/stofs_3d_atl/: exstofs_3d_atl_prep_processing.sh
sorc/stofs_3d_atl_gen_3Dth_from_hycom.fd/: makefile
sorc/stofs_3d_atl_gen_nudge_from_hycom.fd/: makefile
sorc/stofs_3d_atl_netcdf2shef.fd/: makefile  stofs_3d_atl_netcdf2shef.f_NOS_2024_04_02
sorc/stofs_3d_atl_tide_fac.fd/: makefile
src/StofsWorkflow/: adcircmodel.py  cli.py  execution_policy.py  executor.py  model_factory.py  model_type.py  schismmodel.py  stofs_config.py  stofs_logger.py  stofs_model.py  stofs_schema.py  stofs_stage.py  stofs_task.py
test_nightly_build/: run_stofs_workflow.sh  test_nightly_container.sh
testing/: test_adcirc_model.py  test_schism_model.py
ush/stofs_3d_atl/: stofs_3d_atl_add_attr_2d_3d_nc.sh  stofs_3d_atl_create_obc_3d_th.sh
